--- a/index.html
+++ b/index.html
@@ -12,56 +12,40 @@
     <img class="cabecalho_imagem" src="logo_nossa_escola.png" alt="Logo da Página">
     <h1 class="titulo_site">Nossa Escola</h1>
     <div class="sociais">
-      <img class="sociais" src="whatsapp.png" alt="Logo WhatsApp">
-      <img class="sociais" src="facebook.png" alt="Logo Facebook">
-      <img class="sociais" src="instagram.png" alt="Logo Instagram">
+      <img src="whatsapp.png" alt="WhatsApp">
+      <img src="facebook.png" alt="Facebook">
+      <img src="instagram.png" alt="Instagram">
     </div>
   </header>
 
-  <!-- BANNER / CARROSSEL -->
+  <!-- CARROSSEL -->
   <section class="banner">
     <div class="banner-container">
       <img class="banner-img ativo" src="paragrafo_1_banner.jpg" alt="Banner 1">
       <img class="banner-img" src="banner_2.jpg" alt="Banner 2">
       <img class="banner-img" src="banner_3.jpg" alt="Banner 3">
+      <img class="banner-img" src="banner_4.jpg" alt="Banner 4">
     </div>
     <button class="banner-btn esquerda">❮</button>
     <button class="banner-btn direita">❯</button>
   </section>
 
-  <!-- SEÇÃO DE ALUNOS -->
+  <!-- ALUNOS -->
   <section class="estudante">
-    <h1 class="estudante_titulo">Alunos em destaque 2025</h1>
+    <h1 class="estudante_titulo">Alunos em Destaque 2025</h1>
     <div class="estudantes_todos">
-      <div class="estudante-div" data-status="Aprovado">
-        <img class="estudante-imagem" src="estudante_menino.png" alt="Aluno 1">
-        <h3 class="estudante-nome">Aluno 1</h3>
-        <div class="icones">
-          <img class="estudante-icone" src="logo_nossa_escola.png" alt="Site">
-          <img class="estudante-icone" src="instagram.png" alt="Instagram">
-          <img class="estudante-icone" src="facebook.png" alt="Facebook">
-        </div>
-      </div>
-
-      <div class="estudante-div" data-status="Reprovado">
-        <img class="estudante-imagem" src="estudante_menino.png" alt="Aluno 2">
-        <h3 class="estudante-nome">Aluno 2</h3>
-        <div class="icones">
-          <img class="estudante-icone" src="logo_nossa_escola.png" alt="Site">
-          <img class="estudante-icone" src="instagram.png" alt="Instagram">
-          <img class="estudante-icone" src="facebook.png" alt="Facebook">
-        </div>
-      </div>
-
-      <div class="estudante-div" data-status="Aprovado">
-        <img class="estudante-imagem" src="estudante_menina.png" alt="Aluno 3">
-        <h3 class="estudante-nome">Aluno 3</h3>
-        <div class="icones">
-          <img class="estudante-icone" src="logo_nossa_escola.png" alt="Site">
-          <img class="estudante-icone" src="instagram.png" alt="Instagram">
-          <img class="estudante-icone" src="facebook.png" alt="Facebook">
-        </div>
-      </div>
+      <!-- Cards de alunos -->
+      <!-- Cada card tem um status: Aprovado ou Reprovado -->
+      <div class="card" data-status="Aprovado"><div class="front"><img src="estudante_menino.png" alt=""><h3>Aluno 1</h3></div><div class="back aprovado">Aprovado ✅</div></div>
+      <div class="card" data-status="Reprovado"><div class="front"><img src="estudante_menina.png" alt=""><h3>Aluno 2</h3></div><div class="back reprovado">Reprovado ❌</div></div>
+      <div class="card" data-status="Aprovado"><div class="front"><img src="estudante_menino.png" alt=""><h3>Aluno 3</h3></div><div class="back aprovado">Aprovado ✅</div></div>
+      <div class="card" data-status="Reprovado"><div class="front"><img src="estudante_menina.png" alt=""><h3>Aluno 4</h3></div><div class="back reprovado">Reprovado ❌</div></div>
+      <div class="card" data-status="Aprovado"><div class="front"><img src="estudante_menino.png" alt=""><h3>Aluno 5</h3></div><div class="back aprovado">Aprovado ✅</div></div>
+      <div class="card" data-status="Aprovado"><div class="front"><img src="estudante_menina.png" alt=""><h3>Aluno 6</h3></div><div class="back aprovado">Aprovado ✅</div></div>
+      <div class="card" data-status="Reprovado"><div class="front"><img src="estudante_menino.png" alt=""><h3>Aluno 7</h3></div><div class="back reprovado">Reprovado ❌</div></div>
+      <div class="card" data-status="Aprovado"><div class="front"><img src="estudante_menina.png" alt=""><h3>Aluno 8</h3></div><div class="back aprovado">Aprovado ✅</div></div>
+      <div class="card" data-status="Aprovado"><div class="front"><img src="estudante_menino.png" alt=""><h3>Aluno 9</h3></div><div class="back aprovado">Aprovado ✅</div></div>
+      <div class="card" data-status="Reprovado"><div class="front"><img src="estudante_menina.png" alt=""><h3>Aluno 10</h3></div><div class="back reprovado">Reprovado ❌</div></div>
     </div>
   </section>
 
