--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h1>Nossa Escola</h1>
     </div>
     <div class="sociais">
-      <a href="#"><img src="icone_facebook.png" alt="Facebook"></a>
-      <a href="#"><img src="icone_instagram.png" alt="Instagram"></a>
-      <a href="#"><img src="icone_whatsapp.png" alt="WhatsApp"></a>
+      <a href="#"><img src="facebook.png" alt="Facebook"></a>
+      <a href="#"><img src="instagram.png" alt="Instagram"></a>
+      <a href="#"><img src="whatsapp.png" alt="WhatsApp"></a>
     </div>
   </header>
 
