--- a/index.html
+++ b/index.html
@@ -1,52 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nossa Escola | Página Inicial</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Nossa Escola | Destaque 2025</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- HEADER -->
   <header>
-    <div class="logo">
-      <img src="logo_nossa_escola.png" alt="Logo da Escola">
-      <h1>Nossa Escola</h1>
-    </div>
-    <div class="sociais">
-      <a href="#"><img src="facebook.png" alt="Facebook"></a>
-      <a href="#"><img src="instagram.png" alt="Instagram"></a>
-      <a href="#"><img src="whatsapp.png" alt="WhatsApp"></a>
+    <div class="cabecalho-itens">
+      <div class="logo-area">
+        <img class="cabecalho_imagem" src="logo_nossa_escola.png" alt="Logo Nossa Escola">
+        <h1 class="titulo_site">Nossa Escola</h1>
+      </div>
+      <div class="sociais">
+        <a href="#"><img src="icone_whatsapp.png" alt="WhatsApp"></a>
+        <a href="#"><img src="icone_facebook.png" alt="Facebook"></a>
+        <a href="#"><img src="icone_instagram.png" alt="Instagram"></a>
+      </div>
     </div>
   </header>
 
-  <!-- BANNER / CARROSSEL -->
-  <section class="banner">
-    <div class="banner-container">
-      <img class="banner-img ativo" src="paragrafo_1_banner.jpg" alt="Banner 1">
-      <img class="banner-img" src="banner_2.jpg" alt="Banner 2">
-      <img class="banner-img" src="banner_3.jpg" alt="Banner 3">
-      <img class="banner-img" src="banner_4.jpg" alt="Banner 4">
+  <!-- CARROSSEL -->
+  <section class="banner" aria-label="Carrossel de banners">
+    <button class="banner-btn esquerda" aria-label="Anterior">❮</button>
+
+    <div class="banner-viewport">
+      <div class="banner-container">
+        <div class="banner-slide"><img src="banner1.jpg" alt="Banner 1"></div>
+        <div class="banner-slide"><img src="banner2.jpg" alt="Banner 2"></div>
+        <div class="banner-slide"><img src="banner3.jpg" alt="Banner 3"></div>
+        <div class="banner-slide"><img src="banner4.jpg" alt="Banner 4"></div>
+      </div>
     </div>
-    <button class="banner-btn esquerda">❮</button>
-    <button class="banner-btn direita">❯</button>
+
+    <button class="banner-btn direita" aria-label="Próximo">❯</button>
   </section>
 
-  <!-- SEÇÃO ALUNOS -->
-  <section class="estudante">
-    <h1 class="estudante_titulo">Alunos em Destaque 2025</h1>
-    <div class="estudantes_todos"></div>
+  <!-- ALUNOS -->
+  <section class="estudante" aria-labelledby="titulo-alunos">
+    <h2 id="titulo-alunos" class="estudante_titulo">Alunos em Destaque 2025</h2>
+    <div class="estudantes_todos" aria-live="polite"></div>
   </section>
 
   <!-- RODAPÉ -->
   <footer class="escola">
     <img class="logo_rodape" src="logo_nossa_escola.png" alt="Logo da Escola">
-    <h2 class="escola-titulo">
-      Mais informações entre em contato 
-      <a class="link" href="https://wa.me/5541999999999" target="_blank">41 9.9999-9999</a>
-    </h2>
+    <h3 class="escola-titulo">Mais informações entre em contato
+      <a class="link" href="https://wa.me/5541999999999" target="_blank" rel="noopener">41 9.9999-9999</a>
+    </h3>
     <p>©2025 | Curso de ADS | Profº Antonio Carlos | Todos os Direitos Reservados.</p>
-    <p>Política de Privacidade | Proteção de Dados | Encarregado de Dados</p>
   </footer>
 
   <script src="script.js"></script>
