--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <h3 class="escola-titulo">Mais informações entre em contato
       <a class="link" href="https://wa.me/5541999999999" target="_blank" rel="noopener">41 9.9999-9999</a>
     </h3>
-    <p>©2025 | Curso de ADS | Profº Antonio Carlos | Todos os Direitos Reservados.</p>
+    <p>©2025 | Curso de ADS | Gian Vitor da Silva | Todos os Direitos Reservados.</p>
   </footer>
 
   <script src="script.js"></script>
