--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Nossa Escola | Destaque 2025</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <!-- HEADER -->
@@ -24,8 +24,7 @@
 
   <!-- CARROSSEL -->
   <section class="banner" aria-label="Carrossel de banners">
-    <button class="banner-btn esquerda" aria-label="Anterior">❮</button>
-
+    <button class="banner-btn esquerda">❮</button>
     <div class="banner-viewport">
       <div class="banner-container">
         <div class="banner-slide"><img src="banner1.jpg" alt="Banner 1"></div>
@@ -34,14 +33,13 @@
         <div class="banner-slide"><img src="banner4.jpg" alt="Banner 4"></div>
       </div>
     </div>
-
-    <button class="banner-btn direita" aria-label="Próximo">❯</button>
+    <button class="banner-btn direita">❯</button>
   </section>
 
   <!-- ALUNOS -->
   <section class="estudante" aria-labelledby="titulo-alunos">
     <h2 id="titulo-alunos" class="estudante_titulo">Alunos em Destaque 2025</h2>
-    <div class="estudantes_todos" aria-live="polite"></div>
+    <div class="estudantes_todos"></div>
   </section>
 
   <!-- RODAPÉ -->
@@ -50,7 +48,7 @@
     <h3 class="escola-titulo">Mais informações entre em contato
       <a class="link" href="https://wa.me/5541999999999" target="_blank" rel="noopener">41 9.9999-9999</a>
     </h3>
-    <p>©2025 | Curso de ADS | Gian Vitor da Silva | Todos os Direitos Reservados.</p>
+    <p>©2025 | Curso de ADS | Profº Antonio Carlos | Todos os Direitos Reservados.</p>
   </footer>
 
   <script src="script.js"></script>
