--- a/index.html
+++ b/index.html
@@ -1,26 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nossa Escola | Destaque 2025</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <!-- HEADER -->
   <header>
-    <div class="cabecalho-itens">
-      <div class="logo-area">
-        <img class="cabecalho_imagem" src="logo_nossa_escola.png" alt="Logo Nossa Escola">
-        <h1 class="titulo_site">Nossa Escola</h1>
-      </div>
-      <div class="sociais">
-        <a href="#"><img src="icone_whatsapp.png" alt="WhatsApp"></a>
-        <a href="#"><img src="icone_facebook.png" alt="Facebook"></a>
-        <a href="#"><img src="icone_instagram.png" alt="Instagram"></a>
-      </div>
+    <div class="logo-area">
+      <img src="logo_nossa_escola.png" alt="Logo">
+      <h1 class="titulo_site">Nossa Escola</h1>
     </div>
+    <button class="login-btn" onclick="window.location.href='login.html'">Sair</button>
   </header>
 
   <!-- CARROSSEL -->
@@ -36,43 +28,30 @@
   </section>
 
   <!-- ALUNOS -->
-  <section class="estudante">
-    <h2 class="estudante_titulo">Alunos em Destaque 2025</h2>
+  <section class="estudante" aria-labelledby="titulo-alunos">
+    <h2 id="titulo-alunos" class="estudante_titulo">Alunos em Destaque 2025</h2>
     <div class="estudantes_todos">
-      <div class="estudante-div aprovado">
-        <img class="estudante-imagem" src="estudante_menino.png" alt="Aluno">
-        <h3 class="estudante-nome">Aluno 1</h3>
-        <div>
-          <img class="estudante-icone" src="logo_nossa_escola.png" alt="Site">
-          <img class="estudante-icone" src="instagram.png" alt="Instagram">
-          <img class="estudante-icone" src="facebook.png" alt="Facebook">
-        </div>
-        <div class="estudante-status">✅ Aprovado</div>
-      </div>
 
-      <div class="estudante-div reprovado">
-        <img class="estudante-imagem" src="estudante_menina.png" alt="Aluna">
-        <h3 class="estudante-nome">Aluno 2</h3>
-        <div>
-          <img class="estudante-icone" src="logo_nossa_escola.png" alt="Site">
-          <img class="estudante-icone" src="instagram.png" alt="Instagram">
-          <img class="estudante-icone" src="facebook.png" alt="Facebook">
-        </div>
-        <div class="estudante-status">❌ Reprovado</div>
-      </div>
+      <div class="card aprovado"><div class="card-inner"><div class="card-front"><img src="estudante_menino.png"><h3>Lucas</h3></div><div class="card-back"><p>Aprovado</p></div></div></div>
+      <div class="card reprovado"><div class="card-inner"><div class="card-front"><img src="estudante_menina.png"><h3>Maria</h3></div><div class="card-back"><p>Reprovado</p></div></div></div>
+      <div class="card aprovado"><div class="card-inner"><div class="card-front"><img src="estudante_menino.png"><h3>João</h3></div><div class="card-back"><p>Aprovado</p></div></div></div>
+      <div class="card aprovado"><div class="card-inner"><div class="card-front"><img src="estudante_menina.png"><h3>Ana</h3></div><div class="card-back"><p>Aprovado</p></div></div></div>
+      <div class="card reprovado"><div class="card-inner"><div class="card-front"><img src="estudante_menino.png"><h3>Carlos</h3></div><div class="card-back"><p>Reprovado</p></div></div></div>
+      <div class="card aprovado"><div class="card-inner"><div class="card-front"><img src="estudante_menina.png"><h3>Julia</h3></div><div class="card-back"><p>Aprovado</p></div></div></div>
+      <div class="card aprovado"><div class="card-inner"><div class="card-front"><img src="estudante_menino.png"><h3>Pedro</h3></div><div class="card-back"><p>Aprovado</p></div></div></div>
+      <div class="card reprovado"><div class="card-inner"><div class="card-front"><img src="estudante_menina.png"><h3>Sofia</h3></div><div class="card-back"><p>Reprovado</p></div></div></div>
+      <div class="card aprovado"><div class="card-inner"><div class="card-front"><img src="estudante_menino.png"><h3>Felipe</h3></div><div class="card-back"><p>Aprovado</p></div></div></div>
+      <div class="card aprovado"><div class="card-inner"><div class="card-front"><img src="estudante_menina.png"><h3>Laura</h3></div><div class="card-back"><p>Aprovado</p></div></div></div>
 
-      <!-- Você pode duplicar esse bloco para mais alunos -->
     </div>
   </section>
 
-  <!-- RODAPÉ -->
   <footer class="escola">
     <img class="logo_rodape" src="logo_nossa_escola.png" alt="Logo da Escola">
-    <h3 class="escola-titulo">
-      Mais informações entre em contato
+    <h3 class="escola-titulo">Mais informações entre em contato
       <a class="link" href="https://wa.me/5541999999999" target="_blank" rel="noopener">41 9.9999-9999</a>
     </h3>
-    <p>©2025 | Curso de ADS | Profº Antonio Carlos | Todos os Direitos Reservados.</p>
+    <p>©2025 | Curso de ADS | Gian Vitor da Silva | Todos os Direitos Reservados.</p>
   </footer>
 
   <script src="script.js"></script>
