--- a/index.html
+++ b/index.html
@@ -1,58 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nossa Escola | Destaque 2025</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login | Nossa Escola</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <header>
-    <div class="logo-area">
-      <img src="logo_nossa_escola.png" alt="Logo">
-      <h1 class="titulo_site">Nossa Escola</h1>
+<body class="login-body">
+  <div class="login-container">
+    <h1 class="login-titulo">Nossa Escola</h1>
+    <div id="login-form">
+      <input type="text" id="login-nome" placeholder="Nome de usuário" required>
+      <input type="password" id="login-senha" placeholder="Senha" required>
+      <button onclick="entrar()">Entrar</button>
+      <button onclick="mostrarCadastro()">Criar Conta</button>
+      <p id="erro-login"></p>
     </div>
-    <button class="login-btn" onclick="window.location.href='login.html'">Sair</button>
-  </header>
 
-  <!-- CARROSSEL -->
-  <section class="banner" aria-label="Carrossel de banners">
-    <div class="banner-viewport">
-      <div class="banner-container">
-        <div class="banner-slide"><img src="banner1.jpg" alt="Banner 1"></div>
-        <div class="banner-slide"><img src="banner2.jpg" alt="Banner 2"></div>
-        <div class="banner-slide"><img src="banner3.jpg" alt="Banner 3"></div>
-        <div class="banner-slide"><img src="banner4.jpg" alt="Banner 4"></div>
-      </div>
+    <div id="cadastro-form" style="display:none;">
+      <input type="text" id="cadastro-nome" placeholder="Novo nome" required>
+      <input type="password" id="cadastro-senha" placeholder="Nova senha" required>
+      <button onclick="cadastrar()">Avançar</button>
     </div>
-  </section>
-
-  <!-- ALUNOS -->
-  <section class="estudante" aria-labelledby="titulo-alunos">
-    <h2 id="titulo-alunos" class="estudante_titulo">Alunos em Destaque 2025</h2>
-    <div class="estudantes_todos">
-
-      <div class="card aprovado"><div class="card-inner"><div class="card-front"><img src="estudante_menino.png"><h3>Lucas</h3></div><div class="card-back"><p>Aprovado</p></div></div></div>
-      <div class="card reprovado"><div class="card-inner"><div class="card-front"><img src="estudante_menina.png"><h3>Maria</h3></div><div class="card-back"><p>Reprovado</p></div></div></div>
-      <div class="card aprovado"><div class="card-inner"><div class="card-front"><img src="estudante_menino.png"><h3>João</h3></div><div class="card-back"><p>Aprovado</p></div></div></div>
-      <div class="card aprovado"><div class="card-inner"><div class="card-front"><img src="estudante_menina.png"><h3>Ana</h3></div><div class="card-back"><p>Aprovado</p></div></div></div>
-      <div class="card reprovado"><div class="card-inner"><div class="card-front"><img src="estudante_menino.png"><h3>Carlos</h3></div><div class="card-back"><p>Reprovado</p></div></div></div>
-      <div class="card aprovado"><div class="card-inner"><div class="card-front"><img src="estudante_menina.png"><h3>Julia</h3></div><div class="card-back"><p>Aprovado</p></div></div></div>
-      <div class="card aprovado"><div class="card-inner"><div class="card-front"><img src="estudante_menino.png"><h3>Pedro</h3></div><div class="card-back"><p>Aprovado</p></div></div></div>
-      <div class="card reprovado"><div class="card-inner"><div class="card-front"><img src="estudante_menina.png"><h3>Sofia</h3></div><div class="card-back"><p>Reprovado</p></div></div></div>
-      <div class="card aprovado"><div class="card-inner"><div class="card-front"><img src="estudante_menino.png"><h3>Felipe</h3></div><div class="card-back"><p>Aprovado</p></div></div></div>
-      <div class="card aprovado"><div class="card-inner"><div class="card-front"><img src="estudante_menina.png"><h3>Laura</h3></div><div class="card-back"><p>Aprovado</p></div></div></div>
-
-    </div>
-  </section>
-
-  <footer class="escola">
-    <img class="logo_rodape" src="logo_nossa_escola.png" alt="Logo da Escola">
-    <h3 class="escola-titulo">Mais informações entre em contato
-      <a class="link" href="https://wa.me/5541999999999" target="_blank" rel="noopener">41 9.9999-9999</a>
-    </h3>
-    <p>©2025 | Curso de ADS | Gian Vitor da Silva | Todos os Direitos Reservados.</p>
-  </footer>
+  </div>
 
   <script src="script.js"></script>
 </body>
